discussion/kv_engine/172721/172721_rev4_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-50841: Generate stat definitions from json

Replaces stats.def.h with stat_definitions.json.

Macro-driven stat definitions could be a little opaque when adding or
changing stats, and would become unwieldy if stat descriptions were
added.

To support future improvements, and increase readability, re-define all
stats in json.

This is a lot more verbose, but easier to understand at a glance.

Change-Id: Iaf2f947cc2785cec26768e0896978440d5d5a4fa

======================================================================================================================
COMMENTS
======================================================================================================================
Author: James H
Date: 2022-03-23 17:07:42.000000000
Message: 
Uploaded patch set 4: Patch Set 3 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-03-23 17:26:58.000000000
Message: 
Patch Set 4: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16151/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/include/statistics/definitions.h:125:10: error: "generated_stats.h" file not found [clang-diagnostic-error]
#include "generated_stats.h"
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16151/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/include/statistics/definitions.h:125:10:
error: "generated_stats.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16151/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/44640/ : FAILURE

Link error: error LNK2019: unresolved external symbol getopt referenced in function main ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/44640/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/18245/ : FAILURE

Compile error at [2022-03-23T17:23:48.262Z] ../kv_engine/engines/ep/tests/module_tests/configuration_test.cc:273:7:
error: ?template<class T> T Configuration::getParameter(const string&, const std::lock_guard<std::mutex>&) const? is private within this context
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/18245/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/18952/ : FAILURE

Compile error at [2022-03-23T17:26:11.436Z] ../kv_engine/engines/ep/tests/module_tests/configuration_test.cc:281:26:
error: "getParameter" is a private member of "Configuration"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/18952/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/26329/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/16994/ : FAILURE

Compile error at [2022-03-23T17:12:06.964Z] ../kv_engine/engines/ep/tests/module_tests/configuration_test.cc:281:26:
error: "getParameter" is a private member of "Configuration"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/16994/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/5866/ : FAILURE

Compile error at [2022-03-23T17:15:16.954Z] ../kv_engine/engines/ep/tests/module_tests/configuration_test.cc:273:7:
error: ?template<class T> T Configuration::getParameter(const string&, const std::lock_guard<std::mutex>&) const? is private within this context
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/5866/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/5807/ : FAILURE

Compile error at [2022-03-23T17:19:10.773Z] ../kv_engine/engines/ep/tests/module_tests/configuration_test.cc:281:26:
error: "getParameter" is a private member of "Configuration"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/5807/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/17921/ : FAILURE

Compile error at [2022-03-23T17:20:21.220Z] ../kv_engine/engines/ep/tests/module_tests/configuration_test.cc:273:7:
error: ?template<class T> T Configuration::getParameter(const string&, const std::lock_guard<std::mutex>&) const? is private within this context
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/17921/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/37564/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/15081/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
